<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/action_translate"
        android:icon="@drawable/baseline_g_translate_24"
        android:title="@string/translate"
        android:showAsAction="ifRoom" />

    <item
        android:title="@string/rate"
        android:id="@+id/rate"
        android:icon="@drawable/baseline_currency_rupee_24"
        app:showAsAction="ifRoom"/>
    <item
        android:title="@string/notification"
        android:id="@+id/notification"
        android:icon="@drawable/baseline_notifications_24"
        app:showAsAction="ifRoom"/>
    <item
        android:title="@string/share"
        android:id="@+id/share"
        android:icon="@drawable/baseline_share_24"
        app:showAsAction="ifRoom"/>

</menu>